<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="100dp"
            android:text="@string/txt_begin_date"
            android:textSize="14sp"
            android:id="@+id/tv_date_picker"
            android:paddingRight="10dp"
            android:gravity="center"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_centerInParent="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:layout_toRightOf="@id/tv_date_picker"
            android:layout_toEndOf="@id/tv_date_picker"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/et_date" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_sort_order"
            android:textSize="14sp"
            android:id="@+id/tv_sort_order"
            android:gravity="center"
            android:paddingRight="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:entries="@array/sort_order_array"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_toRightOf="@id/tv_sort_order"
            android:layout_toEndOf="@id/tv_sort_order"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textAlignment="center" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_news_desk"
            android:textSize="14sp"
            android:id="@+id/tv_news_desk_values"
            android:gravity="center"
            android:paddingRight="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true" />

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_news_desk_values"
            android:layout_toEndOf="@id/tv_news_desk_values">
            <CheckBox android:id="@+id/checkbox_art"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arts" />
            <CheckBox android:id="@+id/checkbox_fashion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fashion_and_style" />
            <CheckBox android:id="@+id/checkbox_sports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sports" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_centerInParent="true"
            android:text="@string/btn_text_save" />

    </RelativeLayout>


</LinearLayout>